<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud">

    <TextView
        android:textColor="@color/black"
        android:id="@+id/textView"
        android:layout_width="265dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="52dp"
        android:text="@string/list_tickets"
        android:textAlignment="center"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageViewBackToMain"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewBackToMain"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="26dp"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/number_ticket"
        android:inputType="text"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/type_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/type_ticket"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_edit_text" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="391dp"
        android:layout_height="343dp"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/add"
        android:background="@drawable/button"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_edit_text"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/delete"
        android:layout_width="367dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button"
        android:text="@string/delete"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add"
        tools:ignore="MissingConstraints" />




</android.support.constraint.ConstraintLayout>